--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,9 @@ tasks:
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf
+      echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
 
 vscode:
   extensions:
     - bbenoist.Nix
+    - rust-lang.rust
