--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ image:
 tasks:
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
-      echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf
+      echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
       echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
 
 vscode:
