--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,10 +4,11 @@ tasks:
   # echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
-      echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf
+      echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
+      direnv allow &&
+      cabal update
 
     command: >
-      direnv allow &&
       cabal test
 
 vscode:
