--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,10 +2,12 @@ image:
   file: .gitpod.Dockerfile
 tasks:
   # echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
+  - before: >
+      direnv allow
+
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
-      direnv allow &&
       cabal update
 
     command: >
