--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,12 +2,10 @@ image:
   file: .gitpod.Dockerfile
 tasks:
   # echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
-  - before: >
-      cd /workspace/gitpod-flake-ghc9 && direnv allow
-
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
+      echo '[whitelist]\nprefix = [ "/workspace/gitpod-flake-ghc9" ]' >> /home/gitpod/.config/direnv &&
       cabal update
 
     command: >
