--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,8 +5,7 @@ tasks:
   - init: >
       mkdir -p /home/gitpod/.config/nix &&
       echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
-      echo '[whitelist]\nprefix = [ "/workspace/gitpod-flake-ghc9" ]' >> /home/gitpod/.config/direnv &&
-      cabal update
+      echo '[whitelist]\nprefix = [ "/workspace/gitpod-flake-ghc9" ]' >> /home/gitpod/.config/direnv
 
     command: >
       cabal test
