--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,9 +3,7 @@ image:
 tasks:
   # echo 'experimental-features = nix-command flakes' >> /home/gitpod/.config/nix/nix.conf
   - init: >
-      mkdir -p /home/gitpod/.config/nix &&
-      echo 'sandbox = false' >> /home/gitpod/.config/nix/nix.conf &&
-      echo '[whitelist]\nprefix = [ "/workspace/gitpod-flake-ghc9" ]' >> /home/gitpod/.config/direnv
+      cabal build
 
     command: >
       cabal test
