Try to export during before and import during init

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,11 +2,13 @@ image:
   file: .gitpod.Dockerfile
 tasks:
   # Before running init, direnv will be reloaded and build the local flake to the nix store
-  - init: >
+  - before: >
       # If there is a prebuilt .nix-store serialisation we load it
-      if [ -f .nix-store ]; then nix-store --import < .nix-store; fi &&
+      cabal build &&
+      nix-store --export $(nix-store -qR gitpod-flake-ghc9) > .nix-store
+  - init: >
       # We create a .nix-store serialisation so that it's prebuilt
-      nix-store --export $(nix-store -qR gitpod-flake-ghc9) > .nix-store &&
+      nix-store --import < .nix-store &&
       cabal build
 
     command: >
