--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,11 +1,11 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
-  # Before running init, direnv will be reloaded and build the local flake to the nix store
+  # direnv will be reloaded and build the local flake to the nix store
   - before: >
-      # If there is a prebuilt .nix-store serialisation we load it
       cabal build &&
       nix-store --export $(nix-store -qR gitpod-flake-ghc9) > .nix-store
+  # We load the prebuilt .nix-store serialisation
   - init: >
       # We create a .nix-store serialisation so that it's prebuilt
       nix-store --import < .nix-store
