--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,10 @@ tasks:
   # direnv will be reloaded and will build the local flake to the nix store
   # we load the prebuilt .nix-store serialisation if there is one
   - before: >
-      if [ -f .nix-store ]; then nix copy --from .nix-store; fi &&
+      if [ -f .nix-store ]; then nix copy --from .nix-store; fi
 
-  # we load the prebuilt .nix-store serialisation if there is one
+  # we build the project (in the dist-newstyle workspace folder)
+  # we copy the nix store into the .nix-store workspace folder for prebuilding
   - init: >
       cabal build &&
       nix copy --to .nix-store .#
