--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
+[[ -f .nix-store ]] && nix copy --from .nix-store
 source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/1.2.4/direnvrc" "sha256-mjD0RK61W+TEffhlEzjv2QB3l/d5FkXQVPd4S5DfCsA="
 use flake
 
